; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/lmc/extr_lmc_main.c_lmc_dec_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/lmc/extr_lmc_main.c_lmc_dec_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [17 x i8] c"lmc_dec_reset in\00", align 1
@csr_intr = common dso_local global i32 0, align 4
@csr_busmode = common dso_local global i32 0, align 4
@TULIP_BUSMODE_SWRESET = common dso_local global i32 0, align 4
@csr_command = common dso_local global i32 0, align 4
@TULIP_CMD_PROMISCUOUS = common dso_local global i32 0, align 4
@TULIP_CMD_FULLDUPLEX = common dso_local global i32 0, align 4
@TULIP_CMD_PASSBADPKT = common dso_local global i32 0, align 4
@TULIP_CMD_NOHEARTBEAT = common dso_local global i32 0, align 4
@TULIP_CMD_PORTSELECT = common dso_local global i32 0, align 4
@TULIP_CMD_RECEIVEALL = common dso_local global i32 0, align 4
@TULIP_CMD_MUSTBEONE = common dso_local global i32 0, align 4
@TULIP_CMD_OPERMODE = common dso_local global i32 0, align 4
@TULIP_CMD_THRESHOLDCTL = common dso_local global i32 0, align 4
@TULIP_CMD_STOREFWD = common dso_local global i32 0, align 4
@TULIP_CMD_TXTHRSHLDCTL = common dso_local global i32 0, align 4
@csr_sia_general = common dso_local global i32 0, align 4
@TULIP_WATCHDOG_TXDISABLE = common dso_local global i32 0, align 4
@TULIP_WATCHDOG_RXDISABLE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"lmc_dec_reset out\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @lmc_dec_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lmc_dec_reset(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @lmc_trace(i32 %6, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  store i32 0, i32* %9, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = load i32, i32* @csr_intr, align 4
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @LMC_CSR_WRITE(%struct.TYPE_5__* %10, i32 %11, i32 %14)
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = load i32, i32* @csr_busmode, align 4
  %18 = load i32, i32* @TULIP_BUSMODE_SWRESET, align 4
  %19 = call i32 @LMC_CSR_WRITE(%struct.TYPE_5__* %16, i32 %17, i32 %18)
  %20 = call i32 @udelay(i32 25)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %22 = load i32, i32* @csr_command, align 4
  %23 = call i8* @LMC_CSR_READ(%struct.TYPE_5__* %21, i32 %22)
  %24 = ptrtoint i8* %23 to i32
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 2
  store i32 %24, i32* %26, align 4
  %27 = load i32, i32* @TULIP_CMD_PROMISCUOUS, align 4
  %28 = load i32, i32* @TULIP_CMD_FULLDUPLEX, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @TULIP_CMD_PASSBADPKT, align 4
  %31 = or i32 %29, %30
  %32 = load i32, i32* @TULIP_CMD_NOHEARTBEAT, align 4
  %33 = or i32 %31, %32
  %34 = load i32, i32* @TULIP_CMD_PORTSELECT, align 4
  %35 = or i32 %33, %34
  %36 = load i32, i32* @TULIP_CMD_RECEIVEALL, align 4
  %37 = or i32 %35, %36
  %38 = load i32, i32* @TULIP_CMD_MUSTBEONE, align 4
  %39 = or i32 %37, %38
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 4
  %43 = or i32 %42, %39
  store i32 %43, i32* %41, align 4
  %44 = load i32, i32* @TULIP_CMD_OPERMODE, align 4
  %45 = load i32, i32* @TULIP_CMD_THRESHOLDCTL, align 4
  %46 = or i32 %44, %45
  %47 = load i32, i32* @TULIP_CMD_STOREFWD, align 4
  %48 = or i32 %46, %47
  %49 = load i32, i32* @TULIP_CMD_TXTHRSHLDCTL, align 4
  %50 = or i32 %48, %49
  %51 = xor i32 %50, -1
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 2
  %54 = load i32, i32* %53, align 4
  %55 = and i32 %54, %51
  store i32 %55, i32* %53, align 4
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %57 = load i32, i32* @csr_command, align 4
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 2
  %60 = load i32, i32* %59, align 4
  %61 = call i32 @LMC_CSR_WRITE(%struct.TYPE_5__* %56, i32 %57, i32 %60)
  %62 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %63 = load i32, i32* @csr_sia_general, align 4
  %64 = call i8* @LMC_CSR_READ(%struct.TYPE_5__* %62, i32 %63)
  %65 = ptrtoint i8* %64 to i32
  store i32 %65, i32* %3, align 4
  %66 = load i32, i32* @TULIP_WATCHDOG_TXDISABLE, align 4
  %67 = load i32, i32* @TULIP_WATCHDOG_RXDISABLE, align 4
  %68 = or i32 %66, %67
  %69 = load i32, i32* %3, align 4
  %70 = or i32 %69, %68
  store i32 %70, i32* %3, align 4
  %71 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %72 = load i32, i32* @csr_sia_general, align 4
  %73 = load i32, i32* %3, align 4
  %74 = call i32 @LMC_CSR_WRITE(%struct.TYPE_5__* %71, i32 %72, i32 %73)
  %75 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %76 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %75, i32 0, i32 3
  %77 = load i32, i32* %76, align 4
  %78 = call i32 @lmc_trace(i32 %77, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @lmc_trace(i32, i8*) #1

declare dso_local i32 @LMC_CSR_WRITE(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i8* @LMC_CSR_READ(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
